--- a/styles/styles - copia.css
+++ b/styles/styles - copia.css
@@ -1,4 +1,4 @@
-*{ /*Este estilo aplica a todo el documento y resetea los valores por default*/
+/* *{
     margin:0px;
     padding:0px;
     font-family: 'Poppins', sans-serif;
@@ -14,16 +14,16 @@
 
 html {
     scroll-behavior: smooth;
-}
+} */
 
-header {
+/* header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-}
+} */
 
-.form-image {
+/* .form-image {
     width: 40%;
 }
 
@@ -46,18 +46,18 @@ header {
     float:left;
     width: 35%;
     margin-right: 5%;
-}
+} */
 
-header, section, footer{
+/* header, section, footer{
     padding: 2rem 7rem;
-}
+} */
 
-.logo{
+/* .logo{
     width: 13%;
     min-width: 100px;
-}
+} */
 
-nav {
+/* nav {
     text-align:right;
     background-color: #ffffff;
 }
@@ -73,62 +73,61 @@ nav a{
     border-bottom: 3px solid transparent;
     border-bottom-left-radius:8px 8px;
     line-height: 0.5 !important;
-}
+} */
 
-nav a:hover{ /*este estilo aplica cuando pasan el mouse sobre el nav*/
+/* nav a:hover{
     border-bottom-left-radius:8px 8px;
     border-left: 3px solid #03a67b;
     border-bottom: 3px solid #03a67b;
     transition-duration: 0.25s;
-}
+} */
 
-.main-section {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+/* .main-section {
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* flex-wrap: wrap; */
 
-.section1 {
+/* .section1 {
     /* height: 100%;  No logro que la altura se aplica a la seccion ya sea como relativo o absoluto*/
-    margin: 30px 0px;
-    display: flex;
-    flex-wrap: wrap;
-}
+    /* margin: 30px 0px; */ 
+    /* display: flex;
+    flex-wrap: wrap; */
 
-.section2{
+
+/* .section2{
     background-image: linear-gradient(155deg,#edf3e3 0,#bff6f1 100%);
     padding-top: 5%;
     height: 70vh;
-}
+} */
 
-.section3{
-    padding-top: 5%;
-}
-.section3 h2,.section4 h2, .section4 p{
+/* .section3{
+    padding-top: 5%; */
+
+/* .section3 h2,.section4 h2, .section4 p{
     text-align: center;
-}
+} */
 
-.section4{
+/* .section4{
     background-image: linear-gradient(155deg,#bff6f1 0,#edf3e3 100%);
     padding-top: 5%;
-}
+} */
 
-.tablebeneficios {
+/* .tablebeneficios {
     width: 100%;
     display: flex;
     flex-direction: row;
-}
+} */
 
-td {
+/* td {
     text-align: center;
-}
+} */
 
-.tablebeneficios ::first-letter {
+/* .tablebeneficios ::first-letter {
     font-size: 300%;
     color:#03a67b;
-}
+} */
 
-img {
+/* img {
      transition: 1s ease;
 }
 
@@ -137,18 +136,19 @@ img:hover{
     -ms-transform: rotateZ(-10deg);
     transform: rotateZ(-10deg);
     transition: 1s ease;
-}
+} */
 
-.benefits {
+/* .benefits {
     width: 33.33%;
-}
+} */
 
-input{
+/* input{
     padding: 10px;
     border: 1px solid grey;
     box-shadow: 1px 2px 10px grey;
-}
-.button {
+} */
+
+/* .button {
     background-color: #03a67b;
     border: none;
     color: white;
@@ -158,27 +158,26 @@ input{
 
 .button:hover {
     background-color: #03a67bc7;
-  }
+  } */
 
-
-:focus{
+/* :focus{
     border: none !important;
-}
+} */
 
-p{
+/* p{
     margin: 20px 0px; 
-}
+} */
 
-footer{
+/* footer{
     background: #3e4d53;
-}
+} */
 
-footer h6, footer p{
+/* footer h6, footer p{
     color:white;
     margin-bottom: 10px;
-}
+} */
 
-.highlighet-text{
+/* .highlighet-text{
     color:#03a67b;
     font-weight: bold;
 }
@@ -222,9 +221,9 @@ footer h6, footer p{
 .tabletestimonios{
   border-collapse: separate;
   border-spacing: 20px 5px;
-}
+} */
 
-@media only screen and (max-width:900px) {
+/* @media only screen and (max-width:900px) {
     .form {
         display: flex;
         flex-direction: column;
@@ -259,7 +258,7 @@ footer h6, footer p{
  * animation tracking-in-contract
  * ----------------------------------------
  */
- @-webkit-keyframes tracking-in-contract {
+ /* @-webkit-keyframes tracking-in-contract {
     0% {
       letter-spacing: 1em;
       opacity: 0;
@@ -284,14 +283,14 @@ footer h6, footer p{
       letter-spacing: normal;
       opacity: 1;
     }
-  }
+  } */
   
   /**
    * ----------------------------------------
    * animation wobble-ver-left
    * ----------------------------------------
    */
-  @-webkit-keyframes wobble-ver-left {
+  /* @-webkit-keyframes wobble-ver-left {
     0%,
     100% {
       -webkit-transform: translateY(0) rotate(0);
@@ -362,4 +361,4 @@ footer h6, footer p{
 
 .modal-backdrop {
     z-index: 10;
-  }
+  } */ 
