--- a/sass/_mediaqueries.scss
+++ b/sass/_mediaqueries.scss
@@ -131,18 +131,11 @@
 }
 
 @-webkit-keyframes logos {
-        from {
-            transform: translateX(0)
-        }
-        to {
-            transform: translateX(-100%)
-        }
-    }
-    @keyframes logos {
-        from {
-            transform: translateX(0)
-        }
-        to {
-            transform: translateX(-100%)
-        }
-    }
+        0% {transform: translateX(0);}
+        100% {transform: translateX(-100%);}
+}
+
+@keyframes logos {
+        0% {transform: translateX(0);}
+        100% {transform: translateX(-100%);}
+      }
